# Samsung-Helper

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
data/downloads/: README.rst
locales/: bot.pot
locales/pt_BR/LC_MESSAGES/: bot.po
sambot/: __init__.py  __main__.py  config.py
sambot/database/: __init__.py  base.py  chats.py  devices.py  firmware.py  primary.sqlite3  users.py
sambot/filters/: users.py
sambot/handlers/: __init__.py  devices.py  doas.py  language.py  pm_menu.py  specs.py  tools.py
sambot/middlewares/: acl.py  i18n.py
sambot/utils/: callback_data.py  channel_logging.py  command_list.py  devices.py  firmware.py  kernel.py  language.py  logging.py  notify.py  pda.py  scraper.py  systools.py
sambot/utils/aiohttp/: __init__.py  client.py  devices.py  firmware.py  headers.py  kernel.py  scraper.py
service/: README.rst  sambot.service
