[project]

name = "sambot"
version = "1.0.0"
description = "A Telegram bot for Samsung Galaxy users."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Hitalo M." }]
dependencies = [
    "aiogram[fast,i18n]>=3.0.0rc1",
    "aiohttp[speedups]>=3.8.4",
    "aiosqlite>=0.19.0",
    "loguru>=0.7.0",
    "meval>=2.5",
    "backoff>= 2.2.1",
    "msgspec>=0.15.1",
    "sentry-sdk>=1.24.0",
    "pydantic>=2.1.1",
    "pydantic-settings>=2.0.2",
    "bs4>=0.0.1",
    "lxml>=4.9.3",
    "aiofile>=3.8.7",
    "aiocron>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/HitaloM/Samsung-Helper/"

[tool.ruff]
line-length = 99
src = ["sambot"]
target-version = "py311"
select = [
    "I",    # isort
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
]

[tool.ruff.isort]
known-first-party = ["sambot"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.rye]
managed = true
