[project]
name = "sambot"
version = "1.0.0"
description = "A Telegram bot for Samsung Galaxy users."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Hitalo M." }]
dependencies = [
    "aiogram[fast,i18n]>=3.4.1",
    "aiohttp[speedups]>=3.9.5",
    "aiosqlite>=0.20.0",
    "meval>=2.5",
    "backoff>= 2.2.1",
    "sentry-sdk>=1.45.0",
    "pydantic>=2.4.1,<2.6.0",
    "pydantic-settings>=2.2.1",
    "bs4>=0.0.1",
    "lxml>=5.2.1",
    "aiofile>=3.8.8",
    "aiocron>=1.8",
    "uvloop>=0.19.0",
    "picologging>=0.9.3",
    "structlog>=24.1.0",
    "orjson>=3.10.1",
    "better-exceptions>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/HitaloM/Samsung-Helper/"

[tool.ruff]
line-length = 99
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
    "I",    # isort
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "F",    # pyflakes
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "FURB", # refurb
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["sambot"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.rye]
managed = true
