[project]
name = "sambot"
version = "1.0.0"
description = "A Telegram bot for Samsung Galaxy users."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Hitalo M." }]
dependencies = [
    "aiogram[fast]>=3.13.1",
    "aiohttp[speedups]>=3.10.9",
    "aiosqlite>=0.20.0",
    "meval>=2.5",
    "backoff>= 2.2.1",
    "sentry-sdk>=2.15.0",
    "pydantic-settings>=2.5.2",
    "bs4>=0.0.1",
    "lxml>=5.3.0",
    "aiofile>=3.8.8",
    "aiocron>=1.8",
    "uvloop>=0.20.0",
    "picologging>=0.9.3",
    "structlog>=24.4.0",
    "orjson>=3.10.7",
    "humanize>=4.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=4.0.0", "ruff>=0.6.9"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/HitaloM/Samsung-Helper/"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "CPY",   # flake8-copyright
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "F",     # pyflakes
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # perflint
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # ruff
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "PLR0911",
    "PLR0913",
    "PLR0914",
    "PLR0917",
    "PLR2004",
    "PLW2901",
    "PLW1641",
]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-copyright]
author = "Hitalo M"
notice-rgx = "(?i)Copyright \\(C\\) \\d{4}"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
